--- a/movies.ipynb
+++ b/movies.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "6ae17927-6283-4d65-ad68-a8c1eb41d993",
    "metadata": {},
    "outputs": [],
@@ -14,11 +14,304 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "021d5765-16d7-4bce-8390-711eb16e0c3e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "genres = pd.read_csv(\"C:\\\\Users\\\\jacek\\\\Downloads\\\\tmdb_genres.csv\")\n",
+    "movies = pd.read_csv(\"C:\\\\Users\\\\jacek\\\\Downloads\\\\tmdb_movies.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0c222e9e-debd-420f-bd0f-0257ceaadfb7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>genres</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>28.0</td>\n",
+       "      <td>Action</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>12.0</td>\n",
+       "      <td>Adventure</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>14.0</td>\n",
+       "      <td>Fantasy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>16.0</td>\n",
+       "      <td>Animation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>878.0</td>\n",
+       "      <td>Science Fiction</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0           genres\n",
+       "0        28.0           Action\n",
+       "1        12.0        Adventure\n",
+       "2        14.0          Fantasy\n",
+       "3        16.0        Animation\n",
+       "4       878.0  Science Fiction"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "genres.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "686348a1-9176-4542-a143-f619f9bc0797",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>budget</th>\n",
+       "      <th>homepage</th>\n",
+       "      <th>id</th>\n",
+       "      <th>original_language</th>\n",
+       "      <th>original_title</th>\n",
+       "      <th>overview</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>revenue</th>\n",
+       "      <th>runtime</th>\n",
+       "      <th>status</th>\n",
+       "      <th>tagline</th>\n",
+       "      <th>title</th>\n",
+       "      <th>vote_average</th>\n",
+       "      <th>vote_count</th>\n",
+       "      <th>genre_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>237000000</td>\n",
+       "      <td>http://www.avatarmovie.com/</td>\n",
+       "      <td>19995</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Avatar</td>\n",
+       "      <td>In the 22nd century, a paraplegic Marine is di...</td>\n",
+       "      <td>150.437577</td>\n",
+       "      <td>2009-12-10</td>\n",
+       "      <td>2787965087</td>\n",
+       "      <td>162.0</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>Enter the World of Pandora.</td>\n",
+       "      <td>Avatar</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>11800</td>\n",
+       "      <td>28.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>300000000</td>\n",
+       "      <td>http://disney.go.com/disneypictures/pirates/</td>\n",
+       "      <td>285</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Pirates of the Caribbean: At World's End</td>\n",
+       "      <td>Captain Barbossa, long believed to be dead, ha...</td>\n",
+       "      <td>139.082615</td>\n",
+       "      <td>2007-05-19</td>\n",
+       "      <td>961000000</td>\n",
+       "      <td>169.0</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>At the end of the world, the adventure begins.</td>\n",
+       "      <td>Pirates of the Caribbean: At World's End</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>4500</td>\n",
+       "      <td>12.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>245000000</td>\n",
+       "      <td>http://www.sonypictures.com/movies/spectre/</td>\n",
+       "      <td>206647</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Spectre</td>\n",
+       "      <td>A cryptic message from Bond’s past sends him o...</td>\n",
+       "      <td>107.376788</td>\n",
+       "      <td>2015-10-26</td>\n",
+       "      <td>880674609</td>\n",
+       "      <td>148.0</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>A Plan No One Escapes</td>\n",
+       "      <td>Spectre</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>4466</td>\n",
+       "      <td>28.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>250000000</td>\n",
+       "      <td>http://www.thedarkknightrises.com/</td>\n",
+       "      <td>49026</td>\n",
+       "      <td>en</td>\n",
+       "      <td>The Dark Knight Rises</td>\n",
+       "      <td>Following the death of District Attorney Harve...</td>\n",
+       "      <td>112.312950</td>\n",
+       "      <td>2012-07-16</td>\n",
+       "      <td>1084939099</td>\n",
+       "      <td>165.0</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>The Legend Ends</td>\n",
+       "      <td>The Dark Knight Rises</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>9106</td>\n",
+       "      <td>28.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>260000000</td>\n",
+       "      <td>http://movies.disney.com/john-carter</td>\n",
+       "      <td>49529</td>\n",
+       "      <td>en</td>\n",
+       "      <td>John Carter</td>\n",
+       "      <td>John Carter is a war-weary, former military ca...</td>\n",
+       "      <td>43.926995</td>\n",
+       "      <td>2012-03-07</td>\n",
+       "      <td>284139100</td>\n",
+       "      <td>132.0</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>Lost in our world, found in another.</td>\n",
+       "      <td>John Carter</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>2124</td>\n",
+       "      <td>28.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0     budget                                      homepage  \\\n",
+       "0           0  237000000                   http://www.avatarmovie.com/   \n",
+       "1           1  300000000  http://disney.go.com/disneypictures/pirates/   \n",
+       "2           2  245000000   http://www.sonypictures.com/movies/spectre/   \n",
+       "3           3  250000000            http://www.thedarkknightrises.com/   \n",
+       "4           4  260000000          http://movies.disney.com/john-carter   \n",
+       "\n",
+       "       id original_language                            original_title  \\\n",
+       "0   19995                en                                    Avatar   \n",
+       "1     285                en  Pirates of the Caribbean: At World's End   \n",
+       "2  206647                en                                   Spectre   \n",
+       "3   49026                en                     The Dark Knight Rises   \n",
+       "4   49529                en                               John Carter   \n",
+       "\n",
+       "                                            overview  popularity release_date  \\\n",
+       "0  In the 22nd century, a paraplegic Marine is di...  150.437577   2009-12-10   \n",
+       "1  Captain Barbossa, long believed to be dead, ha...  139.082615   2007-05-19   \n",
+       "2  A cryptic message from Bond’s past sends him o...  107.376788   2015-10-26   \n",
+       "3  Following the death of District Attorney Harve...  112.312950   2012-07-16   \n",
+       "4  John Carter is a war-weary, former military ca...   43.926995   2012-03-07   \n",
+       "\n",
+       "      revenue  runtime    status  \\\n",
+       "0  2787965087    162.0  Released   \n",
+       "1   961000000    169.0  Released   \n",
+       "2   880674609    148.0  Released   \n",
+       "3  1084939099    165.0  Released   \n",
+       "4   284139100    132.0  Released   \n",
+       "\n",
+       "                                          tagline  \\\n",
+       "0                     Enter the World of Pandora.   \n",
+       "1  At the end of the world, the adventure begins.   \n",
+       "2                           A Plan No One Escapes   \n",
+       "3                                 The Legend Ends   \n",
+       "4            Lost in our world, found in another.   \n",
+       "\n",
+       "                                      title  vote_average  vote_count  \\\n",
+       "0                                    Avatar           7.2       11800   \n",
+       "1  Pirates of the Caribbean: At World's End           6.9        4500   \n",
+       "2                                   Spectre           6.3        4466   \n",
+       "3                     The Dark Knight Rises           7.6        9106   \n",
+       "4                               John Carter           6.1        2124   \n",
+       "\n",
+       "   genre_id  \n",
+       "0      28.0  \n",
+       "1      12.0  \n",
+       "2      28.0  \n",
+       "3      28.0  \n",
+       "4      28.0  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies.head()"
+   ]
   }
  ],
  "metadata": {
