Top 10 movies - vote average

--- a/movies.ipynb
+++ b/movies.ipynb
@@ -312,6 +312,358 @@
    "source": [
     "movies.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59fe9ec4-32bd-46cc-89c9-8df1152cbd10",
+   "metadata": {},
+   "source": [
+    "### Top 10 movies in respect of vote average and with vote count higher than 3rd quartile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "c5c5ed46-7d49-4070-8787-ef12adc7d8a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>budget</th>\n",
+       "      <th>homepage</th>\n",
+       "      <th>id</th>\n",
+       "      <th>original_language</th>\n",
+       "      <th>original_title</th>\n",
+       "      <th>overview</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>revenue</th>\n",
+       "      <th>runtime</th>\n",
+       "      <th>status</th>\n",
+       "      <th>tagline</th>\n",
+       "      <th>title</th>\n",
+       "      <th>vote_average</th>\n",
+       "      <th>vote_count</th>\n",
+       "      <th>genre_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1881</th>\n",
+       "      <td>1881</td>\n",
+       "      <td>25000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>278</td>\n",
+       "      <td>en</td>\n",
+       "      <td>The Shawshank Redemption</td>\n",
+       "      <td>Framed in the 1940s for the double murder of h...</td>\n",
+       "      <td>136.747729</td>\n",
+       "      <td>1994-09-23</td>\n",
+       "      <td>28341469</td>\n",
+       "      <td>142.0</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>Fear can hold you prisoner. Hope can set you f...</td>\n",
+       "      <td>The Shawshank Redemption</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>8205</td>\n",
+       "      <td>18.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3337</th>\n",
+       "      <td>3337</td>\n",
+       "      <td>6000000</td>\n",
+       "      <td>http://www.thegodfather.com/</td>\n",
+       "      <td>238</td>\n",
+       "      <td>en</td>\n",
+       "      <td>The Godfather</td>\n",
+       "      <td>Spanning the years 1945 to 1955, a chronicle o...</td>\n",
+       "      <td>143.659698</td>\n",
+       "      <td>1972-03-14</td>\n",
+       "      <td>245066411</td>\n",
+       "      <td>175.0</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>An offer you can't refuse.</td>\n",
+       "      <td>The Godfather</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td>5893</td>\n",
+       "      <td>18.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3232</th>\n",
+       "      <td>3232</td>\n",
+       "      <td>8000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>680</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Pulp Fiction</td>\n",
+       "      <td>A burger-loving hit man, his philosophical par...</td>\n",
+       "      <td>121.463076</td>\n",
+       "      <td>1994-10-08</td>\n",
+       "      <td>213928762</td>\n",
+       "      <td>154.0</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>Just because you are a character doesn't mean ...</td>\n",
+       "      <td>Pulp Fiction</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>8428</td>\n",
+       "      <td>53.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2294</th>\n",
+       "      <td>2294</td>\n",
+       "      <td>15000000</td>\n",
+       "      <td>http://movies.disney.com/spirited-away</td>\n",
+       "      <td>129</td>\n",
+       "      <td>ja</td>\n",
+       "      <td>千と千尋の神隠し</td>\n",
+       "      <td>A ten year old girl who wanders away from her ...</td>\n",
+       "      <td>118.968562</td>\n",
+       "      <td>2001-07-20</td>\n",
+       "      <td>274925095</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>The tunnel led Chihiro to a mysterious town...</td>\n",
+       "      <td>Spirited Away</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>3840</td>\n",
+       "      <td>14.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3865</th>\n",
+       "      <td>3865</td>\n",
+       "      <td>3300000</td>\n",
+       "      <td>http://sonyclassics.com/whiplash/</td>\n",
+       "      <td>244786</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Whiplash</td>\n",
+       "      <td>Under the direction of a ruthless instructor, ...</td>\n",
+       "      <td>192.528841</td>\n",
+       "      <td>2014-10-10</td>\n",
+       "      <td>13092000</td>\n",
+       "      <td>105.0</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>The road to greatness can take you to the edge.</td>\n",
+       "      <td>Whiplash</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>4254</td>\n",
+       "      <td>18.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2731</th>\n",
+       "      <td>2731</td>\n",
+       "      <td>13000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>240</td>\n",
+       "      <td>en</td>\n",
+       "      <td>The Godfather: Part II</td>\n",
+       "      <td>In the continuing saga of the Corleone crime f...</td>\n",
+       "      <td>105.792936</td>\n",
+       "      <td>1974-12-20</td>\n",
+       "      <td>47542841</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>I don't feel I have to wipe everybody out, Tom...</td>\n",
+       "      <td>The Godfather: Part II</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>3338</td>\n",
+       "      <td>18.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1818</th>\n",
+       "      <td>1818</td>\n",
+       "      <td>22000000</td>\n",
+       "      <td>http://www.schindlerslist.com/</td>\n",
+       "      <td>424</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Schindler's List</td>\n",
+       "      <td>The true story of how businessman Oskar Schind...</td>\n",
+       "      <td>104.469351</td>\n",
+       "      <td>1993-11-29</td>\n",
+       "      <td>321365567</td>\n",
+       "      <td>195.0</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>Whoever saves one life, saves the world entire.</td>\n",
+       "      <td>Schindler's List</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>4329</td>\n",
+       "      <td>18.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>662</th>\n",
+       "      <td>662</td>\n",
+       "      <td>63000000</td>\n",
+       "      <td>http://www.foxmovies.com/movies/fight-club</td>\n",
+       "      <td>550</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Fight Club</td>\n",
+       "      <td>A ticking-time-bomb insomniac and a slippery s...</td>\n",
+       "      <td>146.757391</td>\n",
+       "      <td>1999-10-15</td>\n",
+       "      <td>100853753</td>\n",
+       "      <td>139.0</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>Mischief. Mayhem. Soap.</td>\n",
+       "      <td>Fight Club</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>9413</td>\n",
+       "      <td>18.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1847</th>\n",
+       "      <td>1847</td>\n",
+       "      <td>25000000</td>\n",
+       "      <td>http://www.warnerbros.com/goodfellas</td>\n",
+       "      <td>769</td>\n",
+       "      <td>en</td>\n",
+       "      <td>GoodFellas</td>\n",
+       "      <td>The true story of Henry Hill, a half-Irish, ha...</td>\n",
+       "      <td>63.654244</td>\n",
+       "      <td>1990-09-12</td>\n",
+       "      <td>46836394</td>\n",
+       "      <td>145.0</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>Three Decades of Life in the Mafia.</td>\n",
+       "      <td>GoodFellas</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>3128</td>\n",
+       "      <td>18.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1990</th>\n",
+       "      <td>1990</td>\n",
+       "      <td>18000000</td>\n",
+       "      <td>http://www.starwars.com/films/star-wars-episod...</td>\n",
+       "      <td>1891</td>\n",
+       "      <td>en</td>\n",
+       "      <td>The Empire Strikes Back</td>\n",
+       "      <td>The epic saga continues as Luke Skywalker, in ...</td>\n",
+       "      <td>78.517830</td>\n",
+       "      <td>1980-05-17</td>\n",
+       "      <td>538400000</td>\n",
+       "      <td>124.0</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>The Adventure Continues...</td>\n",
+       "      <td>The Empire Strikes Back</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>5879</td>\n",
+       "      <td>12.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Unnamed: 0    budget                                           homepage  \\\n",
+       "1881        1881  25000000                                                NaN   \n",
+       "3337        3337   6000000                       http://www.thegodfather.com/   \n",
+       "3232        3232   8000000                                                NaN   \n",
+       "2294        2294  15000000             http://movies.disney.com/spirited-away   \n",
+       "3865        3865   3300000                  http://sonyclassics.com/whiplash/   \n",
+       "2731        2731  13000000                                                NaN   \n",
+       "1818        1818  22000000                     http://www.schindlerslist.com/   \n",
+       "662          662  63000000         http://www.foxmovies.com/movies/fight-club   \n",
+       "1847        1847  25000000               http://www.warnerbros.com/goodfellas   \n",
+       "1990        1990  18000000  http://www.starwars.com/films/star-wars-episod...   \n",
+       "\n",
+       "          id original_language            original_title  \\\n",
+       "1881     278                en  The Shawshank Redemption   \n",
+       "3337     238                en             The Godfather   \n",
+       "3232     680                en              Pulp Fiction   \n",
+       "2294     129                ja                  千と千尋の神隠し   \n",
+       "3865  244786                en                  Whiplash   \n",
+       "2731     240                en    The Godfather: Part II   \n",
+       "1818     424                en          Schindler's List   \n",
+       "662      550                en                Fight Club   \n",
+       "1847     769                en                GoodFellas   \n",
+       "1990    1891                en   The Empire Strikes Back   \n",
+       "\n",
+       "                                               overview  popularity  \\\n",
+       "1881  Framed in the 1940s for the double murder of h...  136.747729   \n",
+       "3337  Spanning the years 1945 to 1955, a chronicle o...  143.659698   \n",
+       "3232  A burger-loving hit man, his philosophical par...  121.463076   \n",
+       "2294  A ten year old girl who wanders away from her ...  118.968562   \n",
+       "3865  Under the direction of a ruthless instructor, ...  192.528841   \n",
+       "2731  In the continuing saga of the Corleone crime f...  105.792936   \n",
+       "1818  The true story of how businessman Oskar Schind...  104.469351   \n",
+       "662   A ticking-time-bomb insomniac and a slippery s...  146.757391   \n",
+       "1847  The true story of Henry Hill, a half-Irish, ha...   63.654244   \n",
+       "1990  The epic saga continues as Luke Skywalker, in ...   78.517830   \n",
+       "\n",
+       "     release_date    revenue  runtime    status  \\\n",
+       "1881   1994-09-23   28341469    142.0  Released   \n",
+       "3337   1972-03-14  245066411    175.0  Released   \n",
+       "3232   1994-10-08  213928762    154.0  Released   \n",
+       "2294   2001-07-20  274925095    125.0  Released   \n",
+       "3865   2014-10-10   13092000    105.0  Released   \n",
+       "2731   1974-12-20   47542841    200.0  Released   \n",
+       "1818   1993-11-29  321365567    195.0  Released   \n",
+       "662    1999-10-15  100853753    139.0  Released   \n",
+       "1847   1990-09-12   46836394    145.0  Released   \n",
+       "1990   1980-05-17  538400000    124.0  Released   \n",
+       "\n",
+       "                                                tagline  \\\n",
+       "1881  Fear can hold you prisoner. Hope can set you f...   \n",
+       "3337                         An offer you can't refuse.   \n",
+       "3232  Just because you are a character doesn't mean ...   \n",
+       "2294     The tunnel led Chihiro to a mysterious town...   \n",
+       "3865    The road to greatness can take you to the edge.   \n",
+       "2731  I don't feel I have to wipe everybody out, Tom...   \n",
+       "1818    Whoever saves one life, saves the world entire.   \n",
+       "662                             Mischief. Mayhem. Soap.   \n",
+       "1847                Three Decades of Life in the Mafia.   \n",
+       "1990                         The Adventure Continues...   \n",
+       "\n",
+       "                         title  vote_average  vote_count  genre_id  \n",
+       "1881  The Shawshank Redemption           8.5        8205      18.0  \n",
+       "3337             The Godfather           8.4        5893      18.0  \n",
+       "3232              Pulp Fiction           8.3        8428      53.0  \n",
+       "2294             Spirited Away           8.3        3840      14.0  \n",
+       "3865                  Whiplash           8.3        4254      18.0  \n",
+       "2731    The Godfather: Part II           8.3        3338      18.0  \n",
+       "1818          Schindler's List           8.3        4329      18.0  \n",
+       "662                 Fight Club           8.3        9413      18.0  \n",
+       "1847                GoodFellas           8.2        3128      18.0  \n",
+       "1990   The Empire Strikes Back           8.2        5879      12.0  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies.sort_values(by='vote_average', ascending=False, inplace=True)\n",
+    "movies.head()\n",
+    "movies[movies['vote_count'] > movies['vote_count'].quantile(0.75)].head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04b0bdf8-bc73-4f29-bf02-56da2dd7fd0c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
