Add movies with avg revenue and budget

--- a/movies.ipynb
+++ b/movies.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "6ae17927-6283-4d65-ad68-a8c1eb41d993",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "021d5765-16d7-4bce-8390-711eb16e0c3e",
    "metadata": {},
    "outputs": [],
@@ -25,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "0c222e9e-debd-420f-bd0f-0257ceaadfb7",
    "metadata": {},
    "outputs": [
@@ -93,7 +94,7 @@
        "4       878.0  Science Fiction"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "686348a1-9176-4542-a143-f619f9bc0797",
    "metadata": {},
    "outputs": [
@@ -304,7 +305,7 @@
        "4      28.0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "id": "c5c5ed46-7d49-4070-8787-ef12adc7d8a2",
    "metadata": {},
    "outputs": [
@@ -409,26 +410,6 @@
        "      <td>18.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3232</th>\n",
-       "      <td>3232</td>\n",
-       "      <td>8000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>680</td>\n",
-       "      <td>en</td>\n",
-       "      <td>Pulp Fiction</td>\n",
-       "      <td>A burger-loving hit man, his philosophical par...</td>\n",
-       "      <td>121.463076</td>\n",
-       "      <td>1994-10-08</td>\n",
-       "      <td>213928762</td>\n",
-       "      <td>154.0</td>\n",
-       "      <td>Released</td>\n",
-       "      <td>Just because you are a character doesn't mean ...</td>\n",
-       "      <td>Pulp Fiction</td>\n",
-       "      <td>8.3</td>\n",
-       "      <td>8428</td>\n",
-       "      <td>53.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2294</th>\n",
        "      <td>2294</td>\n",
        "      <td>15000000</td>\n",
@@ -489,24 +470,24 @@
        "      <td>18.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1818</th>\n",
-       "      <td>1818</td>\n",
-       "      <td>22000000</td>\n",
-       "      <td>http://www.schindlerslist.com/</td>\n",
-       "      <td>424</td>\n",
+       "      <th>3232</th>\n",
+       "      <td>3232</td>\n",
+       "      <td>8000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>680</td>\n",
        "      <td>en</td>\n",
-       "      <td>Schindler's List</td>\n",
-       "      <td>The true story of how businessman Oskar Schind...</td>\n",
-       "      <td>104.469351</td>\n",
-       "      <td>1993-11-29</td>\n",
-       "      <td>321365567</td>\n",
-       "      <td>195.0</td>\n",
+       "      <td>Pulp Fiction</td>\n",
+       "      <td>A burger-loving hit man, his philosophical par...</td>\n",
+       "      <td>121.463076</td>\n",
+       "      <td>1994-10-08</td>\n",
+       "      <td>213928762</td>\n",
+       "      <td>154.0</td>\n",
        "      <td>Released</td>\n",
-       "      <td>Whoever saves one life, saves the world entire.</td>\n",
-       "      <td>Schindler's List</td>\n",
+       "      <td>Just because you are a character doesn't mean ...</td>\n",
+       "      <td>Pulp Fiction</td>\n",
        "      <td>8.3</td>\n",
-       "      <td>4329</td>\n",
-       "      <td>18.0</td>\n",
+       "      <td>8428</td>\n",
+       "      <td>53.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>662</th>\n",
@@ -529,23 +510,23 @@
        "      <td>18.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1847</th>\n",
-       "      <td>1847</td>\n",
-       "      <td>25000000</td>\n",
-       "      <td>http://www.warnerbros.com/goodfellas</td>\n",
-       "      <td>769</td>\n",
+       "      <th>1818</th>\n",
+       "      <td>1818</td>\n",
+       "      <td>22000000</td>\n",
+       "      <td>http://www.schindlerslist.com/</td>\n",
+       "      <td>424</td>\n",
        "      <td>en</td>\n",
-       "      <td>GoodFellas</td>\n",
-       "      <td>The true story of Henry Hill, a half-Irish, ha...</td>\n",
-       "      <td>63.654244</td>\n",
-       "      <td>1990-09-12</td>\n",
-       "      <td>46836394</td>\n",
-       "      <td>145.0</td>\n",
+       "      <td>Schindler's List</td>\n",
+       "      <td>The true story of how businessman Oskar Schind...</td>\n",
+       "      <td>104.469351</td>\n",
+       "      <td>1993-11-29</td>\n",
+       "      <td>321365567</td>\n",
+       "      <td>195.0</td>\n",
        "      <td>Released</td>\n",
-       "      <td>Three Decades of Life in the Mafia.</td>\n",
-       "      <td>GoodFellas</td>\n",
-       "      <td>8.2</td>\n",
-       "      <td>3128</td>\n",
+       "      <td>Whoever saves one life, saves the world entire.</td>\n",
+       "      <td>Schindler's List</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>4329</td>\n",
        "      <td>18.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -568,85 +549,117 @@
        "      <td>5879</td>\n",
        "      <td>12.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>65</td>\n",
+       "      <td>185000000</td>\n",
+       "      <td>http://thedarkknight.warnerbros.com/dvdsite/</td>\n",
+       "      <td>155</td>\n",
+       "      <td>en</td>\n",
+       "      <td>The Dark Knight</td>\n",
+       "      <td>Batman raises the stakes in his war on crime. ...</td>\n",
+       "      <td>187.322927</td>\n",
+       "      <td>2008-07-16</td>\n",
+       "      <td>1004558444</td>\n",
+       "      <td>152.0</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>Why So Serious?</td>\n",
+       "      <td>The Dark Knight</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>12002</td>\n",
+       "      <td>18.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Unnamed: 0    budget                                           homepage  \\\n",
-       "1881        1881  25000000                                                NaN   \n",
-       "3337        3337   6000000                       http://www.thegodfather.com/   \n",
-       "3232        3232   8000000                                                NaN   \n",
-       "2294        2294  15000000             http://movies.disney.com/spirited-away   \n",
-       "3865        3865   3300000                  http://sonyclassics.com/whiplash/   \n",
-       "2731        2731  13000000                                                NaN   \n",
-       "1818        1818  22000000                     http://www.schindlerslist.com/   \n",
-       "662          662  63000000         http://www.foxmovies.com/movies/fight-club   \n",
-       "1847        1847  25000000               http://www.warnerbros.com/goodfellas   \n",
-       "1990        1990  18000000  http://www.starwars.com/films/star-wars-episod...   \n",
+       "      Unnamed: 0     budget  \\\n",
+       "1881        1881   25000000   \n",
+       "3337        3337    6000000   \n",
+       "2294        2294   15000000   \n",
+       "3865        3865    3300000   \n",
+       "2731        2731   13000000   \n",
+       "3232        3232    8000000   \n",
+       "662          662   63000000   \n",
+       "1818        1818   22000000   \n",
+       "1990        1990   18000000   \n",
+       "65            65  185000000   \n",
        "\n",
-       "          id original_language            original_title  \\\n",
-       "1881     278                en  The Shawshank Redemption   \n",
-       "3337     238                en             The Godfather   \n",
-       "3232     680                en              Pulp Fiction   \n",
-       "2294     129                ja                  千と千尋の神隠し   \n",
-       "3865  244786                en                  Whiplash   \n",
-       "2731     240                en    The Godfather: Part II   \n",
-       "1818     424                en          Schindler's List   \n",
-       "662      550                en                Fight Club   \n",
-       "1847     769                en                GoodFellas   \n",
-       "1990    1891                en   The Empire Strikes Back   \n",
+       "                                               homepage      id  \\\n",
+       "1881                                                NaN     278   \n",
+       "3337                       http://www.thegodfather.com/     238   \n",
+       "2294             http://movies.disney.com/spirited-away     129   \n",
+       "3865                  http://sonyclassics.com/whiplash/  244786   \n",
+       "2731                                                NaN     240   \n",
+       "3232                                                NaN     680   \n",
+       "662          http://www.foxmovies.com/movies/fight-club     550   \n",
+       "1818                     http://www.schindlerslist.com/     424   \n",
+       "1990  http://www.starwars.com/films/star-wars-episod...    1891   \n",
+       "65         http://thedarkknight.warnerbros.com/dvdsite/     155   \n",
+       "\n",
+       "     original_language            original_title  \\\n",
+       "1881                en  The Shawshank Redemption   \n",
+       "3337                en             The Godfather   \n",
+       "2294                ja                  千と千尋の神隠し   \n",
+       "3865                en                  Whiplash   \n",
+       "2731                en    The Godfather: Part II   \n",
+       "3232                en              Pulp Fiction   \n",
+       "662                 en                Fight Club   \n",
+       "1818                en          Schindler's List   \n",
+       "1990                en   The Empire Strikes Back   \n",
+       "65                  en           The Dark Knight   \n",
        "\n",
        "                                               overview  popularity  \\\n",
        "1881  Framed in the 1940s for the double murder of h...  136.747729   \n",
        "3337  Spanning the years 1945 to 1955, a chronicle o...  143.659698   \n",
-       "3232  A burger-loving hit man, his philosophical par...  121.463076   \n",
        "2294  A ten year old girl who wanders away from her ...  118.968562   \n",
        "3865  Under the direction of a ruthless instructor, ...  192.528841   \n",
        "2731  In the continuing saga of the Corleone crime f...  105.792936   \n",
-       "1818  The true story of how businessman Oskar Schind...  104.469351   \n",
+       "3232  A burger-loving hit man, his philosophical par...  121.463076   \n",
        "662   A ticking-time-bomb insomniac and a slippery s...  146.757391   \n",
-       "1847  The true story of Henry Hill, a half-Irish, ha...   63.654244   \n",
+       "1818  The true story of how businessman Oskar Schind...  104.469351   \n",
        "1990  The epic saga continues as Luke Skywalker, in ...   78.517830   \n",
+       "65    Batman raises the stakes in his war on crime. ...  187.322927   \n",
        "\n",
-       "     release_date    revenue  runtime    status  \\\n",
-       "1881   1994-09-23   28341469    142.0  Released   \n",
-       "3337   1972-03-14  245066411    175.0  Released   \n",
-       "3232   1994-10-08  213928762    154.0  Released   \n",
-       "2294   2001-07-20  274925095    125.0  Released   \n",
-       "3865   2014-10-10   13092000    105.0  Released   \n",
-       "2731   1974-12-20   47542841    200.0  Released   \n",
-       "1818   1993-11-29  321365567    195.0  Released   \n",
-       "662    1999-10-15  100853753    139.0  Released   \n",
-       "1847   1990-09-12   46836394    145.0  Released   \n",
-       "1990   1980-05-17  538400000    124.0  Released   \n",
+       "     release_date     revenue  runtime    status  \\\n",
+       "1881   1994-09-23    28341469    142.0  Released   \n",
+       "3337   1972-03-14   245066411    175.0  Released   \n",
+       "2294   2001-07-20   274925095    125.0  Released   \n",
+       "3865   2014-10-10    13092000    105.0  Released   \n",
+       "2731   1974-12-20    47542841    200.0  Released   \n",
+       "3232   1994-10-08   213928762    154.0  Released   \n",
+       "662    1999-10-15   100853753    139.0  Released   \n",
+       "1818   1993-11-29   321365567    195.0  Released   \n",
+       "1990   1980-05-17   538400000    124.0  Released   \n",
+       "65     2008-07-16  1004558444    152.0  Released   \n",
        "\n",
        "                                                tagline  \\\n",
        "1881  Fear can hold you prisoner. Hope can set you f...   \n",
        "3337                         An offer you can't refuse.   \n",
-       "3232  Just because you are a character doesn't mean ...   \n",
        "2294     The tunnel led Chihiro to a mysterious town...   \n",
        "3865    The road to greatness can take you to the edge.   \n",
        "2731  I don't feel I have to wipe everybody out, Tom...   \n",
-       "1818    Whoever saves one life, saves the world entire.   \n",
+       "3232  Just because you are a character doesn't mean ...   \n",
        "662                             Mischief. Mayhem. Soap.   \n",
-       "1847                Three Decades of Life in the Mafia.   \n",
+       "1818    Whoever saves one life, saves the world entire.   \n",
        "1990                         The Adventure Continues...   \n",
+       "65                                      Why So Serious?   \n",
        "\n",
        "                         title  vote_average  vote_count  genre_id  \n",
        "1881  The Shawshank Redemption           8.5        8205      18.0  \n",
        "3337             The Godfather           8.4        5893      18.0  \n",
-       "3232              Pulp Fiction           8.3        8428      53.0  \n",
        "2294             Spirited Away           8.3        3840      14.0  \n",
        "3865                  Whiplash           8.3        4254      18.0  \n",
        "2731    The Godfather: Part II           8.3        3338      18.0  \n",
-       "1818          Schindler's List           8.3        4329      18.0  \n",
+       "3232              Pulp Fiction           8.3        8428      53.0  \n",
        "662                 Fight Club           8.3        9413      18.0  \n",
-       "1847                GoodFellas           8.2        3128      18.0  \n",
-       "1990   The Empire Strikes Back           8.2        5879      12.0  "
+       "1818          Schindler's List           8.3        4329      18.0  \n",
+       "1990   The Empire Strikes Back           8.2        5879      12.0  \n",
+       "65             The Dark Knight           8.2       12002      18.0  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,8 +672,122 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "id": "3895634c-1bae-4dfa-b708-3f9849c86d5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies['release_date'] = pd.to_datetime(movies['release_date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "f05cfb02-195a-41c9-90a3-161ad3ee8ed1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>budget</th>\n",
+       "      <th>revenue</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>release_year</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2010</th>\n",
+       "      <td>34,495,410.94</td>\n",
+       "      <td>90,438,110.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011</th>\n",
+       "      <td>34,772,320.34</td>\n",
+       "      <td>92,004,130.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012</th>\n",
+       "      <td>34,922,031.99</td>\n",
+       "      <td>116,065,914.64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013</th>\n",
+       "      <td>35,523,293.65</td>\n",
+       "      <td>101,348,455.82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014</th>\n",
+       "      <td>30,959,887.86</td>\n",
+       "      <td>101,346,599.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015</th>\n",
+       "      <td>31,132,163.74</td>\n",
+       "      <td>105,439,926.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016</th>\n",
+       "      <td>45,703,269.23</td>\n",
+       "      <td>139,049,586.04</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    budget        revenue\n",
+       "release_year                             \n",
+       "2010         34,495,410.94  90,438,110.08\n",
+       "2011         34,772,320.34  92,004,130.76\n",
+       "2012         34,922,031.99 116,065,914.64\n",
+       "2013         35,523,293.65 101,348,455.82\n",
+       "2014         30,959,887.86 101,346,599.11\n",
+       "2015         31,132,163.74 105,439,926.95\n",
+       "2016         45,703,269.23 139,049,586.04"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies['release_year'] = movies['release_date'].dt.year\n",
+    "movies['release_year'].fillna(value=0, inplace=True)\n",
+    "movies['release_year'] = movies['release_year'].map(lambda x: int(x))\n",
+    "movies.set_index('release_year', inplace=True)\n",
+    "pd.set_option('display.float_format', '{:,.2f}'.format)\n",
+    "movies.head(2)\n",
+    "movies_2 = movies.pivot_table(index='release_year', values=['revenue', 'budget'], aggfunc='mean')\n",
+    "movies_2.loc[2010:2016]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "04b0bdf8-bc73-4f29-bf02-56da2dd7fd0c",
+   "id": "489ea5c2-7aea-47d5-8f57-df9e8a9bf3ac",
    "metadata": {},
    "outputs": [],
    "source": []
