Change description to PL

--- a/movies.ipynb
+++ b/movies.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "6ae17927-6283-4d65-ad68-a8c1eb41d993",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "021d5765-16d7-4bce-8390-711eb16e0c3e",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "0c222e9e-debd-420f-bd0f-0257ceaadfb7",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
        "4       878.0  Science Fiction"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "686348a1-9176-4542-a143-f619f9bc0797",
    "metadata": {},
    "outputs": [
@@ -305,7 +305,7 @@
        "4      28.0  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,12 +319,12 @@
    "id": "59fe9ec4-32bd-46cc-89c9-8df1152cbd10",
    "metadata": {},
    "source": [
-    "### Top 10 movies in respect of vote average and with vote count higher than 3rd quartile"
+    "### 10 najlepszych filmów pod względem średniej oceny przy ilości głosów powyżej 3 kwartyla"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "c5c5ed46-7d49-4070-8787-ef12adc7d8a2",
    "metadata": {},
    "outputs": [
@@ -659,7 +659,7 @@
        "65             The Dark Knight           8.2       12002      18.0  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "id": "3895634c-1bae-4dfa-b708-3f9849c86d5f",
    "metadata": {},
    "outputs": [],
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 15,
    "id": "f05cfb02-195a-41c9-90a3-161ad3ee8ed1",
    "metadata": {},
    "outputs": [
@@ -768,7 +768,7 @@
        "2016         45,703,269.23 139,049,586.04"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,13 +781,14 @@
     "pd.set_option('display.float_format', '{:,.2f}'.format)\n",
     "movies.head(2)\n",
     "movies_2 = movies.pivot_table(index='release_year', values=['revenue', 'budget'], aggfunc='mean')\n",
-    "movies_2.loc[2010:2016]"
+    "movies_selected = movies_2.loc[2010:2016]\n",
+    "movies_selected"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "489ea5c2-7aea-47d5-8f57-df9e8a9bf3ac",
+   "id": "fa9bd0af-31b0-45a1-9750-83afa2bbb3bc",
    "metadata": {},
    "outputs": [],
    "source": []
