Add qty of movies per genre in database

--- a/movies.ipynb
+++ b/movies.ipynb
@@ -836,12 +836,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "590f51a1-d1f9-41c8-bae2-cbb72d42ea49",
+   "metadata": {},
+   "source": [
+    "### Ilość filmów z każdego gatunku w bazie"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "e66e61ae-581c-4967-809c-c09136d02d80",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Drama              1207\n",
+       "Comedy             1042\n",
+       "Action              754\n",
+       "Adventure           339\n",
+       "Horror              300\n",
+       "Crime               195\n",
+       "Thriller            194\n",
+       "Animation           123\n",
+       "Fantasy             117\n",
+       "Romance             106\n",
+       "Science Fiction      96\n",
+       "Documentary          89\n",
+       "Family               56\n",
+       "Mystery              41\n",
+       "Music                34\n",
+       "Western              27\n",
+       "History              25\n",
+       "War                  24\n",
+       "TV Movie              4\n",
+       "Foreign               2\n",
+       "Name: genres, dtype: int64"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies_with_genres = movies.merge(genres, how='inner', left_on='genre_id', right_on='Unnamed: 0')\n",
+    "movies_with_genres['genres'].value_counts()"
+   ]
   }
  ],
  "metadata": {
