--- a/movies.ipynb
+++ b/movies.ipynb
@@ -884,6 +884,176 @@
     "movies_with_genres = movies.merge(genres, how='inner', left_on='genre_id', right_on='Unnamed: 0')\n",
     "movies_with_genres['genres'].value_counts()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61ce7a69-ac7f-4853-8af8-311b150c368b",
+   "metadata": {},
+   "source": [
+    "### Średni czas trwania filmu w  minutach według gatunku"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "d7c6e30c-a53c-46f6-a03c-34cb08d0eec7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>runtime</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>genres</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>History</th>\n",
+       "      <td>133.96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>War</th>\n",
+       "      <td>126.12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Western</th>\n",
+       "      <td>117.93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Drama</th>\n",
+       "      <td>115.52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Adventure</th>\n",
+       "      <td>113.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Crime</th>\n",
+       "      <td>112.14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TV Movie</th>\n",
+       "      <td>110.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Action</th>\n",
+       "      <td>109.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Science Fiction</th>\n",
+       "      <td>109.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Romance</th>\n",
+       "      <td>107.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Fantasy</th>\n",
+       "      <td>106.49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thriller</th>\n",
+       "      <td>105.69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Music</th>\n",
+       "      <td>102.85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mystery</th>\n",
+       "      <td>100.61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Comedy</th>\n",
+       "      <td>100.46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Horror</th>\n",
+       "      <td>94.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Documentary</th>\n",
+       "      <td>93.51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Family</th>\n",
+       "      <td>89.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Animation</th>\n",
+       "      <td>89.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Foreign</th>\n",
+       "      <td>83.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 runtime\n",
+       "genres                  \n",
+       "History           133.96\n",
+       "War               126.12\n",
+       "Western           117.93\n",
+       "Drama             115.52\n",
+       "Adventure         113.06\n",
+       "Crime             112.14\n",
+       "TV Movie          110.50\n",
+       "Action            109.06\n",
+       "Science Fiction   109.03\n",
+       "Romance           107.09\n",
+       "Fantasy           106.49\n",
+       "Thriller          105.69\n",
+       "Music             102.85\n",
+       "Mystery           100.61\n",
+       "Comedy            100.46\n",
+       "Horror             94.75\n",
+       "Documentary        93.51\n",
+       "Family             89.80\n",
+       "Animation          89.55\n",
+       "Foreign            83.00"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies_with_genres_pivot = movies_with_genres.pivot_table(index='genres', values=['runtime'], aggfunc='mean')\n",
+    "movies_with_genres_pivot.sort_values(by='runtime', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1df7ea39-6c70-4ca1-afb9-9a0325738566",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
